# barcode-detection

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  convert_to_production.py  pyproject.toml  requirements.txt  server.py
barcode-detection/data/: __init.py__  data_module.py  dataset.py  transforms.py
barcode-detection/data/models/: yolo_lightning.py
barcode-detection/inference/: __init__.py  predictor.py
barcode-detection/training/: __init__.py  metrics.py  trainer.py
barcode-detection/utils/: __init.py__  helpers.py
barcode_detection/: __init__.py
barcode_detection/inference/: __init__.py  predictor.py
barcode_detection/training/: __init__.py  metrics.py  trainer.py
barcode_detection/utils/: __init__.py  helpers.py  logging.py
configs/: config.yaml
configs/data/: default.yaml
configs/model/: yolov8n.ya  yolov8n.yaml
